# blendertk

./: .gitattributes  .gitignore  API_CHANGES.md  API_INDEX.md  API_REGISTRY.json  API_REGISTRY.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  pyproject.toml
.github/workflows/: bump-dev.yml  publish.yml  static-analysis.yml
blendertk/: __init__.py
blendertk/anim_utils/: _anim_utils.py  scale_keys.py  stagger_keys.py
blendertk/audio_utils/: _audio_utils.py  audio_clips.py  audio_clips.ui
blendertk/cam_utils/: __init__.py  _cam_utils.py
blendertk/core_utils/: _core_utils.py  preview.py  (+1 more)
docs/: PARITY_BACKLOG.md  README.md  STRUCTURE.md  data_nodes.md
test/: Run-Tests.ps1  blender_smoke_test.py  dump_runtime_surface.py  fullscreen_area_gui_check.py  open_editor_gui_check.py  scene_import_live_e2e.py  shell_xform_slot_check.py  target_weld_gui_check.py  test_anim_depth.py  test_anim_invert.py  test_anim_repair_curves.py  test_anim_scale.py  test_anim_transfer.py  test_audio_utils.py  test_auto_instancer.py  test_bevel.py  test_blender_connection.py  test_blender_native_menus.py  test_blender_ui_handler.py  test_blenderpy_package_manager.py  test_blendshape_animator.py  test_bridge.py  test_bridges.py  test_calculator.py  test_cam_utils.py  test_channels.py  test_color_id.py  test_color_manager.py  test_core_utils.py  test_curtain.py  test_curve_to_tube.py  test_diagnostics.py  test_duplicate.py  test_dynamic_pipe.py  test_edit_utils.py  test_fbx_stage_worker.py  test_fbx_utils.py  test_hierarchy_sidecar.py  test_hierarchy_sync.py  test_hierarchy_tree_utils.py  (+52 more)
(+202 files in other folders)
